# robotic_arm_upper_machine

./: .gitignore  README.md
arm_main_control/: HCPCA9685.cpp  HCPCA9685.h  arm_main_control.ino
robotic_arm_upper_machine/: CMakeLists.txt  arm_entity.cpp  arm_entity.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.qrc  serialportconfigurationwindow.cpp  serialportconfigurationwindow.h  serialportconfigurationwindow.ui
robotic_arm_upper_machine/mesh/: link0.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
